--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="col-md-12 jumbotron">
         <div class="text-center">
-            <h1> New York Times Scraper</h1>
+            <h1> Crypto News Scraper</h1>
         </div>
 
     </div>
